verify_tests.txt
cargo :    Compiling sinan-backend v1.0.0 (D:\SOLO-2\AI_solo_coder_task_B_142\b
ackend)
所在位置 行:1 字符: 89
+ ... 2\backend ; cargo test --bin sinan-backend micromagnetic_simulation:: ...
+                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (   Compiling si..._B_142\backend) 
   :String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0425]: cannot find type `DragForceRequest` in this scope
    --> src\micromagnetic_simulation.rs:1404:15
     |
1404 |         req: &DragForceRequest,
     |               ^^^^^^^^^^^^^^^^ not found in this scope
     |
help: consider importing this struct
     |
   1 + use crate::models::DragForceRequest;
     |

error[E0425]: cannot find type `DragForceResponse` in this scope
    --> src\micromagnetic_simulation.rs:1406:17
     |
1406 |     ) -> Result<DragForceResponse> {
     |                 ^^^^^^^^^^^^^^^^^ not found in this scope
     |
help: consider importing this struct
     |
   1 + use crate::models::DragForceResponse;
     |

error[E0422]: cannot find struct, variant or union type `DragForceResponse` in 
this scope
    --> src\micromagnetic_simulation.rs:1526:12
     |
1526 |         Ok(DragForceResponse {
     |            ^^^^^^^^^^^^^^^^^ not found in this scope
     |
help: consider importing this struct
     |
   1 + use crate::models::DragForceResponse;
     |

error[E0425]: cannot find type `ForceFeedbackHint` in this scope
    --> src\micromagnetic_simulation.rs:1551:17
     |
1551 |     ) -> Option<ForceFeedbackHint> {
     |                 ^^^^^^^^^^^^^^^^^ not found in this scope
     |
help: consider importing this struct
     |
   1 + use crate::models::ForceFeedbackHint;
     |

error[E0422]: cannot find struct, variant or union type `ForceFeedbackHint` in 
this scope
    --> src\micromagnetic_simulation.rs:1584:14
     |
1584 |         Some(ForceFeedbackHint {
     |              ^^^^^^^^^^^^^^^^^ not found in this scope
     |
help: consider importing this struct
     |
   1 + use crate::models::ForceFeedbackHint;
     |

warning: unused import: `InterferenceType`
 --> src\micromagnetic_simulation.rs:5:25
  |
5 |     InterferenceSource, InterferenceType, MultiDeviceCompareRequest, MultiD
eviceCompareResponse,
  |                         ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0063]: missing field `force_feedback_hint` in initializer of `Interactiv
eSinanResponse`
    --> src\micromagnetic_simulation.rs:1218:23
     |
1218 |             return Ok(InteractiveSinanResponse {
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^ missing `force_feedback_h
int`

error[E0689]: can't call method `max` on ambiguous numeric type `{float}`
    --> src\micromagnetic_simulation.rs:1450:28
     |
1450 |         let inertia = i_zz.max(1e-9);
     |                            ^^^
     |
help: you must specify a type for this binding, like `f32`
     |
1449 |         let i_zz: f32 = mass * (l * l + w * w) / 12.0;
     |                 +++++

error[E0689]: can't call method `min` on ambiguous numeric type `{float}`
    --> src\micromagnetic_simulation.rs:1487:44
     |
1487 |             (2.0 * inertia / damping_coef).min(30.0).max(0.1)
     |                                            ^^^

warning: unused variable: `c_factor`
   --> src\micromagnetic_simulation.rs:113:17
    |
113 |             let c_factor = (alpha_sq / (1.0 - alpha_sq)).sqrt();
    |                 ^^^^^^^^ help: if this is intentional, prefix it with an 
underscore: `_c_factor`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by defau
lt

warning: value assigned to `c` is never read
   --> src\micromagnetic_simulation.rs:135:21
    |
135 |         let mut c = k;
    |                     ^ this value is reassigned later and never used
...
149 |             c = c_new;
    |             --------- `c` is overwritten here before the previous value i
s read
    |
    = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by def
ault

warning: unused variable: `wall_thickness`
   --> src\micromagnetic_simulation.rs:180:13
    |
180 |         let wall_thickness = 1e-8;
    |             ^^^^^^^^^^^^^^ help: if this is intentional, prefix it with a
n underscore: `_wall_thickness`

warning: unused variable: `reduced_field`
   --> src\micromagnetic_simulation.rs:756:13
    |
756 |         let reduced_field = applied_field / anisotropy_field;
    |             ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an
 underscore: `_reduced_field`

error: lifetime may not live long enough
   --> src\models.rs:324:5
    |
312 | #[derive(Debug, Clone, Serialize, Deserialize)]
    |                                   ----------- lifetime `'de` defined here
...
324 |     pub geometry: DeviceGeometryParams,
    |     ^^^ requires that `'de` must outlive `'static`

Some errors have detailed explanations: E0063, E0422, E0425, E0689.
For more information about an error, try `rustc --explain E0063`.
warning: `sinan-backend` (bin "sinan-backend" test) generated 5 warnings
error: could not compile `sinan-backend` (bin "sinan-backend" test) due to 10 p
revious errors; 5 warnings emitted
